--- a/GuessTheWord-Starter/gradle/wrapper/gradle-wrapper.properties
+++ b/GuessTheWord-Starter/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jun 26 12:05:57 PDT 2020
+#Tue Mar 02 17:12:18 KST 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.1.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-all.zip
