--- a/DessertClicker-Starter/app/build.gradle
+++ b/DessertClicker-Starter/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
