--- a/GuessTheWord-Starter/app/build.gradle
+++ b/GuessTheWord-Starter/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.3"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.3"
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'  //ViewModel
+    implementation 'com.jakewharton.timber:timber:4.7.1'  // log
 }
