--- a/MarsRealEstate-Starter/app/build.gradle
+++ b/MarsRealEstate-Starter/app/build.gradle
@@ -71,4 +71,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
     implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
+
+    // glide
+    implementation "com.github.bumptech.glide:glide:$version_glide"
 }
