[DevBytes] 6. Task: Create a background worker (9.2 WorkManager)
https://developer.android.com/codelabs/kotlin-android-training-work-manager#5

--- a/DevBytes-starter/app/build.gradle
+++ b/DevBytes-starter/app/build.gradle
@@ -107,4 +107,6 @@ dependencies {
     def room_version = "2.2.6"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    implementation "android.arch.work:work-runtime-ktx:1.0.1"
 }
